--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
             </li>
           </ul>
         </div>
+      <!-- Форма подписки -->
         <div class="subscribe-footer">
           <h3>Подпишитесь на рассылку</h3>
           <div class="form-send">
