--- a/portfolio.html
+++ b/portfolio.html
@@ -372,6 +372,26 @@
             </li>
           </ul>
         </div>
+        <!-- Форма подписки -->
+        <div class="subscribe-footer">
+          <h3>Подпишитесь на рассылку</h3>
+          <div class="form-send">
+            <form action="#" class="form-subscribe">
+              <input
+                type="text"
+                class="subscribe-input"
+                name="subscribe-name"
+                placeholder="E-mail"
+              />
+            </form>
+            <button class="subscribe-bt">
+              Подписаться
+              <svg class="subscribe-bt-ico" width="24" height="24">
+                <use href="./img/sprite.svg#send"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
