--- a/index.html
+++ b/index.html
@@ -450,24 +450,27 @@
             </li>
           </ul>
         </div>
-      <!-- Форма подписки -->
+        <!-- Форма подписки -->
         <div class="subscribe-footer">
           <h3>Подпишитесь на рассылку</h3>
           <div class="form-send">
             <form action="#" class="form-subscribe">
+              <label for="subscribe-name"></label>
               <input
-                type="text"
+                type="email"
                 class="subscribe-input"
                 name="subscribe-name"
+                id="subscribe-name"
                 placeholder="E-mail"
               />
+
+              <button class="subscribe-bt" type="submit">
+                Подписаться
+                <svg class="subscribe-bt-ico" width="24" height="24">
+                  <use href="./img/sprite.svg#send"></use>
+                </svg>
+              </button>
             </form>
-            <button class="subscribe-bt">
-              Подписаться
-              <svg class="subscribe-bt-ico" width="24" height="24">
-                <use href="./img/sprite.svg#send"></use>
-              </svg>
-            </button>
           </div>
         </div>
       </div>
@@ -477,10 +480,86 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-bt" data-modal-close>
-          <svg class="modal-bt-ico" width="18" height="18">
+          <svg class="modal-bt-ico" width="11" height="11">
             <use href="./img/sprite.svg#close"></use>
           </svg>
         </button>
+        <div class="modal-form-area">
+          <h3 class="modal-heder">Оставьте свои данные, мы вам перезвоним</h3>
+          <form action="#" class="modal-form">
+            <div class="modal-fild">
+              <label for="modal-name" class="modal-label">Имя</label>
+              <div class="input-wrap">
+                <input
+                  type="text"
+                  class="modal-input"
+                  name="modal-name"
+                  id="modal-name"
+                />
+                <svg class="input-icon" width="18" height="18">
+                  <use href="./img/sprite.svg#person-black"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="modal-fild">
+              <label for="modal-tel" class="modal-label">Телефон</label>
+              <div class="input-wrap">
+                <input
+                  type="tel"
+                  class="modal-input"
+                  name="modal-tel"
+                  id="modal-tel"
+                />
+                <svg class="input-icon" width="18" height="18">
+                  <use href="./img/sprite.svg#phone-black"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="modal-fild">
+              <label for="modal-email" class="modal-label">Почта</label>
+              <div class="input-wrap">
+                <input
+                  type="email"
+                  class="modal-input"
+                  name="modal-email"
+                  id="modal-email"
+                />
+                <svg class="input-icon" width="18" height="18">
+                  <use href="./img/sprite.svg#email-black"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="modal-fild">
+              <label for="modal-text" class="modal-label">Комментарий</label>
+              <textarea
+                autocomplete="off"
+                class="modal-input modal-text"
+                name="modal-text"
+                id="modal-text"
+                placeholder="Введите текст"
+              >
+              </textarea>
+            </div>
+            <div class="modal-agree-line">
+              <input
+                type="checkbox"
+                name="modal-agree"
+                id="modal-agree"
+                value="agree"
+                class="modal-check visually-hidden"
+              />
+              <label class="modal-text-check" for="modal-agree"
+                >Соглашаюсь с рассылкой и принимаю
+                <a href="#" class="modal-agree-link">Условия договора</a></label
+              >
+            </div>
+            <div class="modal-bt-send">
+              <button type="submit" class="modal-button bt-send">
+                Отправить
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
     <!-- Скрипт для работы с модальным окном -->
