--- a/portfolio.html
+++ b/portfolio.html
@@ -377,19 +377,22 @@
           <h3>Подпишитесь на рассылку</h3>
           <div class="form-send">
             <form action="#" class="form-subscribe">
+              <label for="subscribe-name"></label>
               <input
-                type="text"
+                type="email"
                 class="subscribe-input"
                 name="subscribe-name"
+                id="subscribe-name"
                 placeholder="E-mail"
               />
+
+              <button class="subscribe-bt" type="submit">
+                Подписаться
+                <svg class="subscribe-bt-ico" width="24" height="24">
+                  <use href="./img/sprite.svg#send"></use>
+                </svg>
+              </button>
             </form>
-            <button class="subscribe-bt">
-              Подписаться
-              <svg class="subscribe-bt-ico" width="24" height="24">
-                <use href="./img/sprite.svg#send"></use>
-              </svg>
-            </button>
           </div>
         </div>
       </div>
