--- a/index.html
+++ b/index.html
@@ -533,8 +533,7 @@
                 name="modal-text"
                 id="modal-text"
                 placeholder="Введите свой текст"
-              >
-              </textarea>
+              ></textarea>
             </div>
             <div class="modal-agree-line">
               <input
